--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@babel/parser": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/traverse": "^7.11.5"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0"
   }
 }
